# pyducklake

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyducklake/: __init__.py  lake.py
src/pyducklake/catalog/: __init__.py  catalog.py
src/pyducklake/storage/: __init__.py  storage.py
tests/: test_pyducklake.py
